--- a/20191110.tex
+++ b/20191110.tex
@@ -16,7 +16,7 @@ $
 (\bm{A} + \bm{B}) + \bm{C} = \bm{A} + (\bm{B}+\bm{C}) \qquad
 (\bm{A}\bm{B})\bm{C}=\bm{A}(\bm{B}\bm{C}) \qquad
 (k+l)\bm{A}=k\bm{A}+l\bm{A} \qquad
-k(\bm{A}+\bm{B})=k\bm{A}+k\bm{B} \qquad
+k(\bm{A}+\bm{B})=k\bm{A}+k\bm{B} \\
 \bm{A}(\bm{B}+\bm{C})=\bm{A}\bm{B}+\bm{A}\bm{C} \qquad
 $
 \subsection{矩阵转置的性质}
@@ -40,7 +40,7 @@ $
 (k \bm{A})^{-1}=\frac{1}{k}\bm{A} \qquad
 (\bm{A}\bm{B})^{-1}=\bm{B}^{-1}\bm{A}^{-1} \qquad
 (\bm{A}^T)^{-1}=(\bm{A}^{-1})^T \qquad
-(\bm{A}^n)^{-1}=(\bm{A}^{-1})^n \qquad
+(\bm{A}^n)^{-1}=(\bm{A}^{-1})^n \\
 \bm{A}_{m*m},\bm{B}_{n*n}: \qquad
 \begin{pmatrix}
 	\bm{A} & \bm{O} \\
@@ -73,44 +73,29 @@ r( \bm{A} )=r( \bm{A}^T )=r( \bm{A}^T \bm{A} )=r( \bm{A} \bm{A} ^T) \qquad
 \subsection{向量祖相关性与线性表示的性质}
 2.设$\alpha_1...\alpha_n$线性无关 \\ 
 (1)若$\alpha_1...\alpha_n,\beta$线性相关,则向量 $b$可以由 $\alpha_1...\alpha_n$唯一线性表示 \\ 
-"$\Rightarrow$"$\exists$不全为0的 $k_1...k_n,k_0$使 \\ 
- $k_1\alpha_1+...+k_n\alpha_n+k_0\beta=0$ \\ 
-若$k_0=0\Rightarrow k_1\alpha_1+...+k_n=0$\\
-$k_0 \neq 0 \Rightarrow \beta=-\frac{k_0}{k_}\alpha_1-...-\frac{k_n}{k_0}\alpha_n$ \\ 
+"$\Rightarrow$"$\exists$不全为0的 $k_1...k_n,k_0$使$k_1\alpha_1+...+k_n\alpha_n+k_0\beta=0$ ;\qquad 
+若$k_0=0\Rightarrow k_1\alpha_1+...+k_n=0$,$k_0 \neq 0 \Rightarrow \beta=-\frac{k_0}{k_}\alpha_1-...-\frac{k_n}{k_0}\alpha_n$ \\ 
 
-证明唯一性:令$\beta=l_1\alpha_1+...+l_n\alpha_n$ \\
-\ \ \ $\beta=t_1\alpha_1+...+t_n\alpha_n$ \\ 
-$\Rightarrow (l_1-t_1)\alpha_1+...+(l_n-t_n)\alpha_n=0$ \\ 
-因为$\alpha_1...\alpha_n$线性无关,所以  $l_1=t_1,...,l_n=t_n$,证毕 \\ 
-
-(2)$\alpha_1...\alpha_n,b$线性无关$\Leftrightarrow $向量b不可以由 $\alpha_1...\alpha_n$线性表示 \\ 
-用反证法证明。\\ 
+证明唯一性:令$\beta=l_1\alpha_1+...+l_n\alpha_n$ ;\qquad $\beta=t_1\alpha_1+...+t_n\alpha_n$ \qquad $\Rightarrow (l_1-t_1)\alpha_1+...+(l_n-t_n)\alpha_n=0$ \qquad
+因为$\alpha_1...\alpha_n$线性无关,所以  $l_1=t_1,...,l_n=t_n$,证毕 \\
+(2)$\alpha_1...\alpha_n,b$线性无关$\Leftrightarrow $向量b不可以由 $\alpha_1...\alpha_n$线性表示 ;\qquad用反证法证明。\\ 
 3.全组线性无关$\Rightarrow$部分组线性无关 \\ 
 4.部分组相关$\Rightarrow$全组线性相关\\ 
-5.$\alpha_1...\alpha_n$为n个n维向量 \\
-$\alpha_1...\alpha_n$线性无关的充分必要条件是$|\alpha_1,...,\alpha_n|\neq 0$\\ 
-用下面的结论 \\ 
-$A=(\alpha_1...\alpha_n),\alpha_1...\alpha_n$线性无关$\Leftrightarrow$$\alpha_1...\alpha_n$的秩=n $\Leftrightarrow r(A)=n \Leftrightarrow |A|\neq 0$ \\ 
-5.$\alpha_1...\alpha_n$线性相关$\Leftrightarrow|\alpha_1...\alpha_n|=0$ \\ 
-证:令$A=(\alpha_1...\alpha_n)$.\\ 
-$\alpha_1...\alpha_n$线性相关$\Leftrightarrow \alpha_1...\alpha_n $的秩<n $\Leftrightarrow r(A)=n \Leftrightarrow |A| = 0$ \\ 
-6.设$\alpha_1...\alpha_n$为n个m维向量,若$m<n$,则向量组$\alpha_1...\alpha_n$一定线性相关
-说明:口诀向量组左右长上下短一点线性相关\\ 
-向量的维数代表了方程的个数 \\ 
-向量的个数代表了未知数的个数 \\ 
-方程数少了，有自由变量，一定有非零解，则一定线性相关 \\ 
-证明:令$A_{m*n}=(\alpha_1...\alpha_n) \Rightarrow r(A) \leq m < n$\\ 
-因为$\alpha_1...\alpha_n$线性相关$\Leftrightarrow \alpha_1...\alpha_n$的秩<n  $\Leftrightarrow r(A)<n$ \\ 
-而$r(A)\leq m<n.$所以 $\alpha_1...\alpha_n$线性相关
+5.$\alpha_1\dots\alpha_n$为n个n维向量 \quad $\alpha_1...\alpha_n$线性无关的充分必要条件是$|\alpha_1,...,\alpha_n|\neq 0$\\ 
+用结论$A=(\alpha_1...\alpha_n),\alpha_1...\alpha_n$线性无关$\Leftrightarrow$$\alpha_1...\alpha_n$的秩=n $\Leftrightarrow r(A)=n \Leftrightarrow |A|\neq 0$ \\ 
+6.$\alpha_1...\alpha_n$线性相关$\Leftrightarrow|\alpha_1...\alpha_n|=0$ \qquad 证:令$A=(\alpha_1...\alpha_n)$.\qquad 
+$\alpha_1...\alpha_n$线性相关\qquad $\Leftrightarrow \qquad \alpha_1...\alpha_n $的秩<n $ \qquad \Leftrightarrow \qquad r(A)=n \qquad \Leftrightarrow\qquad |A| = 0$ \\ 
+7.设$\alpha_1...\alpha_n$为n个m维向量,若$m<n$,则向量组$\alpha_1...\alpha_n$一定线性相关 \\qquad
+口诀向量组左右长上下短一点线性相关\\ 
+向量的维数代表了方程的个数 ; \qquad向量的个数代表了未知数的个数; \qquad 方程数少了，有自由变量，一定有非零解，则一定线性相关 \\ 
+证明:令$A_{m*n}=(\alpha_1...\alpha_n) \Rightarrow r(A) \leq m < n$\qquad因为$\alpha_1...\alpha_n$线性相关$\Leftrightarrow \alpha_1...\alpha_n$的秩<n  $\Leftrightarrow r(A)<n$ \qquad而$r(A)\leq m<n.$所以 $\alpha_1...\alpha_n$线性相关
 
 \subsection{汤家凤行列式强化提高}
 1. $D=\left|\begin{array}{ccccc}{1} & {2} & {3} & {4} & {5} \\ {7} & {7} & {7} & {3} & {3} \\ {3} & {2} & {4} & {5} & {2} \\ {3} & {3} & {3} & {2} & {2} \\ {4} & {6} & {5} & {2} & {3}\end{array}\right|, \text {则} A_{31}+A_{32}+A_{33}=$ \\ \\
 $A_{31}+A_{32}+A_{33}=1*A_{31}+1*A_{32}+1*A_{33}+0*A_{34}+0*A_{35} = \left|\begin{array}{ccccc}{1} & {2} & {3} & {4} & {5} \\ {7} & {7} & {7} & {3} & {3} \\ {1} & {1} & {1} & {0} & {0} \\ {3} & {3} & {3} & {2} & {2} \\ {4} & {6} & {5} & {2} & {3} \end{array}\right| = \left|\begin{array}{lllll}{1} & {2} & {3} & {4} & {5} \\ {0} & {0} & {0} & {3} & {3} \\ {1} & {1} & {1} & {0} & {0} \\ {0} & {0} & {0} & {2} & {2} \\ {4} & {6} & {5} & {2} & {3}\end{array}\right|=0$ \\ \\
 2.
 已知
-\begin{equation}|\boldsymbol{E}-\boldsymbol{A}|=|\boldsymbol{E}-2 \boldsymbol{A}|=|\boldsymbol{E}-3 \boldsymbol{A}|=0
-\end{equation}
- 求$ \left|\boldsymbol{B}^{-1}+2 \boldsymbol{E}\right|$ \\ \\
+$|\boldsymbol{E}-\boldsymbol{A}|=|\boldsymbol{E}-2 \boldsymbol{A}|=|\boldsymbol{E}-3 \boldsymbol{A}|=0$求$ \left|\boldsymbol{B}^{-1}+2 \boldsymbol{E}\right|$ \\ 
 解:因为$|\boldsymbol{E}-\boldsymbol{A}|=|\boldsymbol{E}-2 \boldsymbol{A}|=|\boldsymbol{E}-3 \boldsymbol{A}|=0$
 所以$\boldsymbol{A}$的特征值为 $\frac{1}{3},\frac{1}{2}$,1
 %  \vspace*{-105pt}
