格式稀疏问题

--- a/20191110.tex
+++ b/20191110.tex
@@ -91,8 +91,8 @@ $\alpha_1...\alpha_n$线性相关\qquad $\Leftrightarrow \qquad \alpha_1...\alph
 证明:令$A_{m*n}=(\alpha_1...\alpha_n) \Rightarrow r(A) \leq m < n$\qquad因为$\alpha_1...\alpha_n$线性相关$\Leftrightarrow \alpha_1...\alpha_n$的秩<n  $\Leftrightarrow r(A)<n$ \qquad而$r(A)\leq m<n.$所以 $\alpha_1...\alpha_n$线性相关
 
 \subsection{汤家凤行列式强化提高}
-1. $D=\left|\begin{array}{ccccc}{1} & {2} & {3} & {4} & {5} \\ {7} & {7} & {7} & {3} & {3} \\ {3} & {2} & {4} & {5} & {2} \\ {3} & {3} & {3} & {2} & {2} \\ {4} & {6} & {5} & {2} & {3}\end{array}\right|, \text {则} A_{31}+A_{32}+A_{33}=$ \\ \\
-$A_{31}+A_{32}+A_{33}=1*A_{31}+1*A_{32}+1*A_{33}+0*A_{34}+0*A_{35} = \left|\begin{array}{ccccc}{1} & {2} & {3} & {4} & {5} \\ {7} & {7} & {7} & {3} & {3} \\ {1} & {1} & {1} & {0} & {0} \\ {3} & {3} & {3} & {2} & {2} \\ {4} & {6} & {5} & {2} & {3} \end{array}\right| = \left|\begin{array}{lllll}{1} & {2} & {3} & {4} & {5} \\ {0} & {0} & {0} & {3} & {3} \\ {1} & {1} & {1} & {0} & {0} \\ {0} & {0} & {0} & {2} & {2} \\ {4} & {6} & {5} & {2} & {3}\end{array}\right|=0$ \\ \\
+1. $D=\left|\begin{array}{ccccc}{1} & {2} & {3} & {4} & {5} \\ {7} & {7} & {7} & {3} & {3} \\ {3} & {2} & {4} & {5} & {2} \\ {3} & {3} & {3} & {2} & {2} \\ {4} & {6} & {5} & {2} & {3}\end{array}\right|, \text {则} A_{31}+A_{32}+A_{33}=$ 
+$\left|\begin{array}{ccccc}{1} & {2} & {3} & {4} & {5} \\ {7} & {7} & {7} & {3} & {3} \\ {1} & {1} & {1} & {0} & {0} \\ {3} & {3} & {3} & {2} & {2} \\ {4} & {6} & {5} & {2} & {3} \end{array}\right| = \left|\begin{array}{lllll}{1} & {2} & {3} & {4} & {5} \\ {0} & {0} & {0} & {3} & {3} \\ {1} & {1} & {1} & {0} & {0} \\ {0} & {0} & {0} & {2} & {2} \\ {4} & {6} & {5} & {2} & {3}\end{array}\right|=0$ \\ \\
 2.
 已知
 $|\boldsymbol{E}-\boldsymbol{A}|=|\boldsymbol{E}-2 \boldsymbol{A}|=|\boldsymbol{E}-3 \boldsymbol{A}|=0$求$ \left|\boldsymbol{B}^{-1}+2 \boldsymbol{E}\right|$ \\ 
@@ -112,9 +112,7 @@ $|\boldsymbol{E}-\boldsymbol{A}|=|\boldsymbol{E}-2 \boldsymbol{A}|=|\boldsymbol{
 \qquad
 	(cosx)^{(n)}=coss(x+\frac{n\pi}{2})  
 \)
-\begin{displaymath} 
-	\frac{1}{(ax+b)^{(n)}}= \frac{(-1)^nn!a^n}{(ax+b)^{(n+1)}} 
-\end{displaymath} \\
+\(	\frac{1}{(ax+b)^{(n)}}= \frac{(-1)^nn!a^n}{(ax+b)^{(n+1)}}\) 
 设y=f(x)可导且\(f^\prime(x)\neq 0, x= \varphi(y)\)为反函数,则\(x=\varphi(y)\)可导,且
 \(
 \varphi^\prime(y)=\frac{1}{f^\prime(x)}
